fixed, "jumping" glitch when featured item description expanded

--- a/framework/homepage_partials/less/_version_1.less
+++ b/framework/homepage_partials/less/_version_1.less
@@ -256,6 +256,9 @@
 			.full-title {
 				display: none;
 			}
+			.oneline-title {
+				margin-bottom: 20px;
+			}
 
 			.feature-speaker, .feature-header, .feature-description {
 				padding-left: 6px;
